--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,6 +7,11 @@
         android:title="@string/title_home" />
 
     <item
+        android:id="@+id/nav_search"
+        android:icon="@drawable/ic_search_24"
+        android:title="@string/title_search" />
+
+    <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/ic_person_24"
         android:title="@string/title_profile" />
