--- a/app/src/main/res/menu/main_options_menu.xml
+++ b/app/src/main/res/menu/main_options_menu.xml
@@ -6,6 +6,7 @@
         android:id="@+id/logout"
         android:icon="@drawable/ic_logout_24"
         android:title="@string/options_logout"
-        app:showAsAction="always" />
+        android:orderInCategory="99"
+        app:showAsAction="ifRoom" />
 
 </menu>
