--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,17 @@
         android:id="@+id/nav_home"
         android:name="app.khodko.catfood.ui.products.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_nav_home_to_nav_filter"
+            app:destination="@id/nav_filter" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_filter"
+        android:name="app.khodko.catfood.ui.products.FilterProductsFragment"
+        android:label="@string/title_filter"
+        tools:layout="@layout/fragment_filter_products" />
 
     <fragment
         android:id="@+id/nav_search"
