--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,8 @@
         <item name="colorSecondaryVariant">@color/colorSecondaryDark</item>
         <item name="colorOnSecondary">@color/textColorOnDark</item>
 
+        <item name="colorControlNormal">@color/colorPrimaryDark</item>
+
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
@@ -23,9 +25,13 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.CatFood.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.CatFood.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" >
+        <item name="colorControlNormal">@color/colorPrimaryDark</item>
+    </style>
 
-    <style name="Theme.CatFood.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.CatFood.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" >
+        <item name="colorControlNormal">@color/colorPrimaryDark</item>
+    </style>
 
     <style name="NestedScrollBarStyle">
         <item name="android:scrollbarFadeDuration">250</item>
