--- a/app/src/main/res/layout/product_view_item.xml
+++ b/app/src/main/res/layout/product_view_item.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/productImage"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_gravity="center"
         android:src="@drawable/ic_image_24"
         tools:ignore="ContentDescription" />
@@ -19,16 +19,16 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:paddingStart="10sp">
+        android:paddingStart="8sp">
 
         <TextView
             android:id="@+id/nameView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:singleLine="true"
+            android:maxLines="2"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="14sp"
+            android:textSize="13sp"
             android:textStyle="bold" />
 
         <TextView
@@ -49,7 +49,7 @@
             android:paddingVertical="2dp"
             android:singleLine="true"
             android:textColor="@color/textColor"
-            android:textSize="14sp"
+            android:textSize="13sp"
             android:textStyle="bold" />
 
     </LinearLayout>
