--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/NestedScrollBarStyle"
-    tools:context=".ui.products.FilterProductsFragment">
+    tools:context=".ui.product.ProductFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
