--- a/app/src/main/res/menu/home_fragment_options_menu.xml
+++ b/app/src/main/res/menu/home_fragment_options_menu.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/filter"
         android:icon="@drawable/ic_filter_24"
-        android:title="@string/title_filter"
+        android:title="@string/title_product"
         android:orderInCategory="1"
         app:showAsAction="always" />
 
