--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -64,7 +64,11 @@
         android:id="@+id/nav_favorites"
         android:name="app.khodko.catfood.ui.favorites.FavoritesFragment"
         android:label="@string/title_favorites"
-        tools:layout="@layout/fragment_favorites" />
+        tools:layout="@layout/fragment_favorites" >
+        <action
+            android:id="@+id/action_nav_favorites_to_nav_product"
+            app:destination="@id/nav_product" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_info"
