--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/toolbarBackground"
             app:titleTextColor="@color/colorPrimaryDark"
+            app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/Theme.CatFood.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
