--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -20,6 +20,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="6dp"
             android:src="@drawable/ic_image_24"
+            android:background="@color/imageBackground"
             tools:ignore="ContentDescription" />
 
         <com.google.android.material.chip.Chip
