--- a/app/src/main/res/layout/favorites_view_item.xml
+++ b/app/src/main/res/layout/favorites_view_item.xml
@@ -12,6 +12,7 @@
         android:layout_height="48dp"
         android:layout_gravity="center"
         android:src="@drawable/ic_image_24"
+        android:background="@color/imageBackground"
         tools:ignore="ContentDescription" />
 
     <LinearLayout
