--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -29,6 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:textSize="16sp"
+            android:textColor="@color/textColorLight"
             android:textStyle="bold" />
 
         <TextView
@@ -37,6 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:textSize="16sp"
+            android:textColor="@color/textColorLight"
             android:textStyle="bold" />
 
         <androidx.appcompat.widget.SwitchCompat
@@ -46,8 +48,9 @@
             android:layout_marginTop="10dp"
             android:checked="false"
             android:text="@string/switch_themes"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textStyle="bold"
+            android:textColor="@color/textColorLight"
             app:switchPadding="10dp" />
 
         <Button
