--- a/app/src/main/res/layout/favorites_view_item.xml
+++ b/app/src/main/res/layout/favorites_view_item.xml
@@ -20,7 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:paddingStart="8sp">
+        android:paddingStart="8sp"
+        android:paddingEnd="0sp">
 
         <TextView
             android:id="@+id/nameView"
